package ar.utn.donatrack.notificaciones.model.medios;

public class Email extends MedioNotificacion {
    @Override
    public String getNombre() { return "EMAIL"; }//no hace falta pero ver logica
}