package ar.utn.donatrack.notificaciones.model.medios;

public abstract class MedioNotificacion {
    public abstract String getNombre();
}
