package ar.utn.donatrack.notificaciones.model.medios;

public class Sms extends MedioNotificacion {
    @Override
    public String getNombre() { return "SMS"; }
}
