package ar.utn.donatrack.notificaciones.model.medios;

public class WhatsApp extends MedioNotificacion {
    @Override
    public String getNombre() { return "WHATSAPP"; }
}
