@startuml diagramaClasesNotificacionesModelYService

class Notificacion {
    - destinatario : String
    - mensaje : String
    - estado : EstadoNotificacion
    - fechaCreacion : LocalDateTime
    - fechaEnvio : LocalDateTime
    + marcarEnviada() : void
    + marcarFallida() : void
}

abstract class MedioNotificacion {
}

class Email {
}

class Sms{
}

class WhatsApp {
}
enum EstadoNotificacion {
    PENDIENTE
    ENVIADA
    FALLIDA
}

class NotificacionService {
    - repositorio : NotificacionRepositoryInterface
    - notificadorFactory : NotificadorFactory
    + enviar(solicitud : SolicitudNotificacionDto) : void
    + obtenerTodas() : List<Notificacion>
    + obtenerPorId(id : UUID) : Notificacion
}


Email --> MedioNotificacion
Sms --> MedioNotificacion
WhatsApp --> MedioNotificacion
Notificacion --> EstadoNotificacion
Notificacion --> MedioNotificacion

NotificacionService --> Notificacion

@enduml